fixed filestore id name change issue, minor alignment issues in employee change status

--- a/frontend/micro-ui-internals/packages/css/example/index.css
+++ b/frontend/micro-ui-internals/packages/css/example/index.css
@@ -1659,7 +1659,8 @@ img, video {
   -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0 -2px 8px;
   box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.16);
   max-width: 480px;
-  position: fixed;
+  z-index: 100;
+  position: sticky;
   bottom: 0;
   width: 100%;
   --bg-opacity:1;
@@ -1763,14 +1764,14 @@ img, video {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  z-index: 30;
   position: fixed;
   width: 100%;
   height: 100%;
   overflow: auto;
   top: 0;
   left: 0;
-  min-height: 100vh; }
+  min-height: 100vh;
+  z-index: 10000; }
 
 @media (min-width: 780px) {
   .popup-wrap {
@@ -2351,10 +2352,10 @@ img, video {
   -ms-flex-pack: center;
   justify-content: center; }
   .inbox-container .filters-container .filter .filter-card {
-    padding: 16px;
     --bg-opacity:1;
     background-color: #fff;
-    background-color: rgba(255, 255, 255, var(--bg-opacity)); }
+    background-color: rgba(255, 255, 255, var(--bg-opacity));
+    padding: 10px; }
     .inbox-container .filters-container .filter .filter-card .heading {
       display: -webkit-box;
       display: -ms-flexbox;
