--- a/frontend/micro-ui-internals/packages/css/src/components/actionbar.scss
+++ b/frontend/micro-ui-internals/packages/css/src/components/actionbar.scss
@@ -1,7 +1,8 @@
 .action-bar-wrap {
   box-shadow: rgba(0, 0, 0, 0.16) 0 -2px 8px;
   max-width: 480px;
-  @apply fixed bottom-0 w-full bg-white py-sm px-sm text-right;
+  z-index: 100;
+  @apply sticky bottom-0 w-full bg-white py-sm px-sm text-right;
   div {
     @apply w-full;
   }
