--- a/frontend/micro-ui-internals/packages/css/src/pages/employee/inbox.scss
+++ b/frontend/micro-ui-internals/packages/css/src/pages/employee/inbox.scss
@@ -32,7 +32,8 @@
   .filters-container {
     .filter {
       .filter-card {
-        @apply p-md bg-white;
+        @apply bg-white;
+        padding: 10px;
 
         .heading {
           @apply flex justify-between;
